# ironoxide-swig-bindings

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  RELEASING.md  build.rs  flake.nix  install-build-tools.sh  rust-toolchain.toml
.cargo/: config
.github/: .gitignore  auth.properties.iron  set-versions.sh  signing-key.asc.iron  sonatype.sbt.iron
.github/workflows/: ci.yaml  release-android.yaml  release-github.yaml  release-java.yaml  release.yaml  release1.yaml  release2.yaml  security.yaml  start-release.yaml
.travis_scripts/: Dockerfile.centos8fake  build-release.sh  cross-test.sh  java-home.sh  maybe-install-rust.sh  maybe-install-sbt.sh  maybe-start-docker.sh  maybe-stop-docker.sh
android/: .gitignore  Cargo.toml  README.md  build-aar.sh  build.gradle  build.sh  build_test.sh  gradle.properties  gradlew.bat  local.properties  settings.gradle  shell.nix
android/examples/: README.md  example-instructions.md
android/examples/Example_Application/: README.md  build.gradle  settings.gradle
android/examples/Example_Application/app/: build.gradle
android/examples/Example_Application/app/src/androidTest/java/com/ironcorelabs/example_application/: RustlsBundledTest.java
android/examples/Example_Application/app/src/main/: AndroidManifest.xml
android/examples/Example_Application/app/src/main/java/com/ironcorelabs/example_application/: MainActivity.java  MyRecyclerViewAdapter.java
android/examples/Example_Application/app/src/main/res/drawable/: icl_logo.xml
android/examples/Example_Application/app/src/main/res/layout/: activity_main.xml  recyclerview_row.xml
android/examples/Example_Application/app/src/main/res/raw/: device_context.json
android/examples/Example_Application/app/src/main/res/values/: strings.xml
android/examples/Example_Application/gradle/wrapper/: gradle-wrapper.properties
android/gradle/wrapper/: gradle-wrapper.properties
android/ironoxide-android/: .gitignore  build.gradle  gradlew  proguard-rules.pro
android/ironoxide-android/gradle/wrapper/: gradle-wrapper.properties
android/ironoxide-android/src/androidTest/java/com/ironcorelabs/sdk/: ExampleInstrumentedTest.java  FullIntegrationTest.java
android/ironoxide-android/src/androidTest/resources/: deviceContext.json  deviceContext.json.enc  deviceContext.json.iron
android/ironoxide-android/src/main/: AndroidManifest.xml
android/ironoxide-android/src/main/res/values/: strings.xml
android/ironoxide-android/src/test/java/com/ironcorelabs/sdk/: ExampleUnitTest.java
common/: build.rs  chrono-include.rs  jni_c_header.rs  jni_typemaps.rs  lib.rs  lib.rs.in
cpp/: BUILDING.md  CMakeLists.txt  Cargo.toml  README.md  chrono-include.rs  cpp_typemaps.rs  ironoxide.pc.in  rust_swig_gen.cmake  rust_swig_regen_headers.cmake
cpp/cmake/: ironoxide_regen_headers.cmake.in  rust_part_lib.cmake  rust_swig_gen.cmake.in
cpp/test/: CMakeLists.txt  test.cpp
java/: Cargo.toml  README.md
java/src/: lib.rs
java/tests/: .scalafmt.conf  TestInstructions.md  build.sbt  publish.sbt
java/tests/project/: plugins.sbt
java/tests/src/test/resources/: service-keys.conf.enc
java/tests/src/test/scala/ironoxide/: CommonTests.scala  DocumentTests.scala  GroupTests.scala  SearchTests.scala  TestSuite.scala  UserTests.scala  package.scala
java/tests/src/test/scala/ironrust/: DudeSuite.scala  FullIntegrationTest.scala  JwtHelper.scala
src/: chrono-include.rs  lib.rs  lib.rs.in
tests/: build.sbt  publish.sbt
tests/project/: plugins.sbt
tests/src/test/resources/: service-keys.conf.enc  service-keys.conf.iron
tests/src/test/scala/ironrust/: DudeSuite.scala  FullIntegrationTest.scala  JwtHelper.scala  KeyConfig.scala  UserCreateFailureTest.scala  UserVerifyFailureTest.scala
