[package]
name = "ironoxide-java"
version = "0.11.1"
authors = ["IronCore Labs <info@ironcorelabs.com>"]
build = "build.rs"
edition = "2018"

[lib]
name = "ironoxide_java"
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
itertools = "0.8"
ironoxide = {version = "0.18.0", features = ["blocking"]}
chrono = "0.4"
serde_json = "~1.0"

[build-dependencies]
env_logger = "0.7"
rust_swig = { git = "https://github.com/Dushistov/rust_swig.git", rev = "cfd12fb7406f9f2774832c051ce7b4e6c2e193d7"}
bindgen = "0.52"
