[workspace]
resolver = "3"
members = ["java", "android", "cpp"]

[profile.release]
lto = true

[workspace.dependencies]
bindgen = "0.72"
cfg-if = "1"
env_logger = { version = "0.11", default-features = false }
flapigen = { git = "https://github.com/Dushistov/flapigen-rs.git", rev = "68c28403" }
ironoxide = { version = "4", features = [
    "blocking",
    "beta",
    "tls-rustls",
], default-features = false }
itertools = "0.14"
jni-sys = "0.3"
log = "0.4"
regex = "1.3"
serde_json = "1"
time = "0.3"
