[package]
name = "ironoxide-android"
version = "0.16.0"
authors = ["IronCore Labs <info@ironcorelabs.com>"]
build = "../common/build.rs"
edition = "2021"

[lib]
path = "../common/lib.rs"
name = "ironoxide_android"
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
itertools = "0.13"
ironoxide = { version = "4", features = [
    "blocking",
    "beta",
    "tls-rustls",
], default-features = false }
serde_json = "1"
jni-sys = "0.3"
time = "0.3"

[build-dependencies]
env_logger = { version = "0.11", default-features = false }
flapigen = { git = "https://github.com/Dushistov/flapigen-rs.git", rev = "a861f6fc" }
bindgen = "0.70"
regex = "1.3"
cfg-if = "1"

[features]
default = ["android"]
android = []
