[package]
name = "ironoxide-android"
version = "1.0.0"
authors = ["IronCore Labs <info@ironcorelabs.com>"]
build = "../common/build.rs"
edition = "2024"

[lib]
path = "../common/lib.rs"
name = "ironoxide_android"
crate-type = ["cdylib"]

[dependencies]
itertools = { workspace = true }
ironoxide = { workspace = true }
jni-sys = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
jni = "0.21"
rustls-platform-verifier = "0.6"

[build-dependencies]
bindgen = { workspace = true }
cfg-if = { workspace = true }
env_logger = { workspace = true }
flapigen = { workspace = true }
regex = { workspace = true }

[features]
default = ["android"]
android = []
