[package]
name = "ironoxide-cpp"
version = "0.15.0"
authors = ["IronCore Labs <info@ironcorelabs.com>"]
build = "../common/build.rs"
edition = "2021"

[lib]
name = "ironoxide"
path = "../common/lib.rs"
crate-type = ["cdylib", "staticlib"]

[dependencies]
log = "0.4"
itertools = "0.10"
ironoxide = { version = "2", features = [
    "blocking",
    "beta",
    "tls-rustls",
], default-features = false }
serde_json = "1"
time = "0.3"

[build-dependencies]
env_logger = "0.10"
flapigen = { git = "https://github.com/Dushistov/flapigen-rs.git", rev = "c74d484" }
bindgen = "0.68"
regex = "1.3"
cfg-if = "1"

[features]
default = ["cpp"]
cpp = []
