[package]
name = "ironoxide-cpp"
version = "0.16.0"
authors = ["IronCore Labs <info@ironcorelabs.com>"]
build = "../common/build.rs"
edition = "2021"

[lib]
name = "ironoxide"
path = "../common/lib.rs"
crate-type = ["cdylib", "staticlib"]

[dependencies]
log = "0.4"
itertools = "0.13"
ironoxide = { git = "https://github.com/IronCoreLabs/ironoxide", branch = "reuse-reqwest-client", features = [
    "blocking",
    "beta",
    "tls-rustls",
], default-features = false }
serde_json = "1"
time = "0.3"

[build-dependencies]
env_logger = { version = "0.11", default-features = false }
flapigen = { git = "https://github.com/Dushistov/flapigen-rs.git", rev = "a861f6fc" }
bindgen = "0.70"
regex = "1.3"
cfg-if = "1"

[features]
default = ["cpp"]
cpp = []
