[package]
name = "ironoxide-cpp"
version = "1.0.0"
authors = ["IronCore Labs <info@ironcorelabs.com>"]
build = "../common/build.rs"
edition = "2024"

[lib]
name = "ironoxide"
path = "../common/lib.rs"
crate-type = ["cdylib", "staticlib"]

[dependencies]
itertools = { workspace = true }
ironoxide = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }

[build-dependencies]
bindgen = { workspace = true }
cfg-if = { workspace = true }
env_logger = { workspace = true }
flapigen = { workspace = true }
regex = { workspace = true }

[features]
default = ["cpp"]
cpp = []
