[package]
name = "ironoxide-java"
version = "0.14.7"
authors = ["IronCore Labs <info@ironcorelabs.com>"]
build = "../common/build.rs"
edition = "2021"

[lib]
path = "../common/lib.rs"
name = "ironoxide_java"
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
itertools = "0.10.0"
ironoxide = { version = "1", features = ["blocking", "beta", "tls-rustls"], default-features = false }
serde_json = "1.0"
time = "0.3"


[build-dependencies]
env_logger = "0.9"
flapigen = { git = "https://github.com/Dushistov/flapigen-rs.git", rev = "6bf005adbaf810863aa42d4f590d9f82dc948916" }
bindgen = "0.60"
regex = "1.3"
cfg-if = "1"

[features]
default = ["java"]
java = []
