[package]
name = "ironoxide-java"
version = "0.15.0"
authors = ["IronCore Labs <info@ironcorelabs.com>"]
build = "../common/build.rs"
edition = "2021"

[lib]
path = "../common/lib.rs"
name = "ironoxide_java"
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
itertools = "0.10.0"
ironoxide = { version = "2", features = ["blocking", "beta", "tls-rustls"], default-features = false }
serde_json = "1.0"
time = "0.3"


[build-dependencies]
env_logger = "0.9"
flapigen = { git = "https://github.com/Dushistov/flapigen-rs.git", rev = "d8167dbd6896b96bf1ae8c0db339d2f0adcfb1c4" }
bindgen = "0.60"
regex = "1.3"
cfg-if = "1"

[features]
default = ["java"]
java = []
