[package]
name = "ironoxide-java"
version = "0.16.0"
authors = ["IronCore Labs <info@ironcorelabs.com>"]
build = "../common/build.rs"
edition = "2024"

[lib]
path = "../common/lib.rs"
name = "ironoxide_java"
crate-type = ["cdylib"]

[dependencies]
itertools = { workspace = true }
ironoxide = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }


[build-dependencies]
bindgen = { workspace = true }
cfg-if = { workspace = true }
env_logger = { workspace = true }
flapigen = { workspace = true }
regex = { workspace = true }

[features]
default = ["java"]
java = []
